--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
         "dev:server": "babel-node ./server/index.js",
         "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
         "build:prod": "webpack --mode production --config config/webpack.prod.config.js --env.NODE_ENV=production --progress",
-        "prod": "SET NODE_ENV=production&&babel-node ./server/index.js",
-        "lint": "eslint ./src",
-        "heroku-postbuild": "npm install&&npm run build",
-        "start": "babel-node ./server/index.js"
+        "prod": "npm run build:prod&&SET NODE_ENV=production&&babel-node ./server/index.js",
+        "lint": "eslint ./src"
     },
     "author": "KirylAnishchuk",
     "license": "ISC",
