--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
         "build:prod": "webpack --mode production --config config/webpack.prod.config.js --env.NODE_ENV=production --progress",
         "prod": "npm run build:prod&&SET NODE_ENV=production&&babel-node ./server/index.js",
+        "prod:server": "SET NODE_ENV=production&&babel-node ./server/index.js",
         "lint": "eslint ./src"
     },
     "author": "KirylAnishchuk",
