--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "build:prod": "webpack --mode production --config config/webpack.prod.config.js --env.NODE_ENV=production --progress",
         "prod": "npm run build:prod&&SET NODE_ENV=production&&babel-node ./server/index.js",
         "prod:server": "SET NODE_ENV=production&&babel-node ./server/index.js",
-        "lint": "eslint ./src"
+        "lint": "eslint ./src",
+        "start": "build:prod&&babel-node ./server/index.js"
     },
     "author": "KirylAnishchuk",
     "license": "ISC",
@@ -65,6 +66,5 @@
         "react-router-dom": "^4.3.1",
         "redux": "^4.0.0",
         "redux-thunk": "^2.3.0"
-    },
-    "proxy": "http://localhost:8088"
+    }
 }
