--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "prod": "npm run build:prod&&SET NODE_ENV=production&&babel-node ./server/index.js",
         "prod:server": "SET NODE_ENV=production&&babel-node ./server/index.js",
         "lint": "eslint ./src",
-        "start": "build:prod&&babel-node ./server/index.js"
+        "start": "npm run build:prod&&babel-node ./server/index.js"
     },
     "author": "KirylAnishchuk",
     "license": "ISC",
